Still trying to fix the paragraphs, make them centered and make the social media aligned right

--- a/css/main.css
+++ b/css/main.css
@@ -120,8 +120,7 @@ li {
 }
 
 .paragraph {
-    margin: 0 auto;
-    display: block;
+    text-align: center;
 }
 
 .map {
@@ -134,6 +133,7 @@ li {
 .portfolio-piece {
     margin: 0 auto;
     display: block;
+    width: 100%;
 }
 
 .buttons {
@@ -152,14 +152,12 @@ work-imgs {
 .icons {
     margin: 0;
     padding: 0;
-    display: block;
+    text-align: right;
     width: 2.5em;
 }
 
 .icon-width {
     max-width: 25em;
-    display: block;
-    margin: 0 auto;
 }
 
 .nav-footer a {
